# structmatch

./: PRD.md  README.md  REVIEW.md  pyproject.toml
.hypothesis/constants/: 4049a7cf9c820c32  73b9f91c30a6f44c  7e82a231dd7e7869  a79155a3e7e14d8c  d6641e857dbe4184  d67867a53a3fa02f  ec2e3475e0b1831a  f6bd330360e09e4b
src/structmatch/: __init__.py  comparators.py  core.py  diff.py  options.py  schema.py  utils.py
src/structmatch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_adversarial.py  test_comparators.py  test_core.py  test_diff.py  test_integration.py  test_options.py  test_round2.py  test_schema.py
