[project]
name = "structmatch"
version = "0.1.0"
description = "Deep structural matching, diffing, and pattern matching for Python"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Teja"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "hypothesis", "pytest-cov"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
